Add project for the first time
