# swagger/swagger/swagger ex/swagger.yaml
@@ -65,6 +65,29 @@ paths:
                 type: array
                 items:
                   $ref: '#/definitions/VideoToDelete'
+  /Upload Comment:
+    delete:
+      tags: [Tests]
+      operationId: app.PostUploadComment
+      summary: Upload comment to specific video
+      parameters:
+        - name: Comment
+          in: body
+          schema:
+            $ref: '#/definitions/Comment'
+          in: body
+          schema:
+            $ref: '#/definitions/Comment'
+      responses:
+        200:
+          description: comment on video
+          schema:
+            type: object
+            properties:
+              pets:
+                type: array
+                items:
+                  $ref: '#/definitions/Comment'
 definitions:
 
   newVideoId:
